Fix word wrapping for non-webkit.
Shouldn't have been using css `word-break: break-word;`

--- a/stylesheets/_mixins.scss
+++ b/stylesheets/_mixins.scss
@@ -321,7 +321,6 @@
         box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.10);
         min-width: 16ch;
         margin: 1em 0;
-        max-width: 90%;
         max-height: 30em;
         overflow: auto;
     }
